--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ db.sqlite3
 
 .vscode/
 
+secrets.json
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,django
